--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~0.1.12",
     "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "grunt-build-control": "~0.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
