--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,9 @@ future: true
 # _config.build.yml sets this to false on `grunt build`
 show_drafts: true
 
-# Split posts over multiple subdirectories called “page2”, “page3”, … “pageN”
+# Split posts over multiple subdirectories called “page/2”, “page/3”, … “page/N”
 paginate: 10
-paginate_path: 'page:num'
+paginate_path: 'blog/page/:num'
 
 # Markdown library
 markdown: redcarpet
