--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,11 @@
 {
   "name": "dcalhoungithubio",
   "version": "0.0.0",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "normalize-css": "~2.1.3",
+    "bourbon": "~3.1.8",
+    "neat": "~1.4.0",
+    "modernizr": "~2.6.3"
   }
 }
