--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "dcalhoungithubio",
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "normalize-css": "~2.1.3",
     "bourbon": "~3.1.8",
-    "neat": "~1.4.0",
-    "modernizr": "~2.6.3"
-  }
+    "neat": "~1.5.0",
+    "modernizr": "~2.7.1",
+    "jquery": "~2.0.3"
+  },
+  "devDependencies": {}
 }
