--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,10 @@ paginate_path: 'blog/page/:num'
 
 # Markdown library
 markdown: redcarpet
+
 # Markdown library options
-# redcarpet:
-  # extensions: ['fenced_code_blocks', 'smart']
+redcarpet:
+  extensions: ['fenced_code_blocks', 'smart', 'strikethrough', 'footnotes']
 
 # Use Pygments to highlight code blocks
 pygments: true
