--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "http://davidcalhoun.me",
   "devDependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-react": "^6.1.18",
     "history": "^1.13.1",
-    "jsx-loader": "^0.13.2",
+    "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "static-site-generator-webpack-plugin": "^1.3.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   }
 }
