--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "history": "^1.13.1",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "static-site-generator-webpack-plugin": "^1.3.0",
+    "static-render-webpack-plugin": "^0.1.2",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   }
