Bundle styles into single file

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.23.0",
     "cssnext-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^0.9.1",
     "history": "^1.13.1",
-    "node-libs-browser": "^0.5.2",
+    "node-libs-browser": "^0.5.3",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "static-render-webpack-plugin": "^0.1.2",
