--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "css-loader": "^0.23.0",
     "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^0.9.1",
-    "history": "^1.13.1",
-    "node-libs-browser": "^0.5.3",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
     "static-render-webpack-plugin": "^0.1.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "basscss": "^7.0.4"
+    "basscss": "^7.0.4",
+    "history": "^1.13.1",
+    "node-libs-browser": "^0.5.3",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3"
   }
 }
