--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
-    "dev": "webpack-dev-server --progress --colors",
+    "dev": "webpack-dev-server --inline --hot --progress --colors --content-base dist/",
     "start": "npm run dev",
-    "webpack": "webpack --progress --colors"
+    "webpack": "NODE_ENV=production webpack --progress --colors --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "static-render-webpack-plugin": "^0.1.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
