--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot --progress --colors --content-base dist/",
+    "dev": "webpack-dev-server --progress --colors",
     "start": "npm run dev",
     "webpack": "NODE_ENV=production webpack --progress --colors --config webpack.production.config.js"
   },
@@ -26,7 +26,7 @@
     "css-loader": "^0.23.0",
     "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^0.9.1",
-    "static-render-webpack-plugin": "^0.1.2",
+    "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
@@ -35,7 +35,8 @@
     "basscss": "^7.0.4",
     "history": "^1.13.1",
     "node-libs-browser": "^0.5.3",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-router": "^1.0.2"
   }
 }
