--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --progress --colors",
     "start": "npm run dev",
-    "webpack": "NODE_ENV=production webpack --progress --colors --config webpack.production.config.js"
+    "webpack": "webpack --progress --colors --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
