--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot --config webpack.dev.config.js",
     "start": "npm run dev",
-    "webpack": "webpack --progress --colors"
+    "build": "webpack --progress --colors"
   },
   "repository": {
     "type": "git",
