--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
-    "dev": "webpack-dev-server --progress --colors --inline --hot --config webpack.dev.config.js",
+    "dev": "webpack-dev-server --progress --colors --config webpack.dev.config.js",
     "start": "npm run dev",
     "build": "webpack --progress --colors"
   },
