--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
-    "dev": "webpack-dev-server --progress --colors --config webpack.dev.config.js",
-    "start": "npm run dev",
+    "dev": "webpack-dev-server --hot --inline --progress --colors --content-base dist/ --config webpack.dev.config.js",
+    "start": "npm run build && npm run dev",
     "build": "webpack --progress --colors"
   },
   "repository": {
@@ -13,7 +13,8 @@
     "url": "git+https://github.com/dcalhoun/dcalhoun.github.io.git"
   },
   "author": "David Calhoun",
-  "license": "ISC",
+  "license": "UNLICENSED",
+  "private": true,
   "bugs": {
     "url": "https://github.com/dcalhoun/dcalhoun.github.io/issues"
   },
@@ -24,15 +25,19 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.23.0",
-    "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^0.9.1",
+    "postcss-calc": "^5.2.0",
+    "postcss-custom-media": "^5.0.1",
+    "postcss-custom-properties": "^5.0.0",
+    "postcss-import": "^8.0.2",
+    "postcss-loader": "^0.8.0",
     "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "basscss": "^7.0.4",
+    "basscss": "^8.0.0-beta5",
     "history": "^1.13.1",
     "node-libs-browser": "^0.5.3",
     "react": "^0.14.3",
