--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.23.0",
@@ -31,6 +32,7 @@
     "postcss-custom-properties": "^5.0.0",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.0",
+    "react-transform-hmr": "^1.0.2",
     "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
