--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "postcss-calc": "^5.2.0",
