--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --hot --inline --colors --content-base dist/ --config webpack.dev.config.js",
+    "dev": "NODE_ENV=development webpack-dev-server --colors --content-base dist/",
     "start": "npm run build && npm run dev",
     "build": "NODE_ENV=production webpack --colors"
   },
@@ -25,9 +25,13 @@
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.6.5",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
+    "front-matter": "^2.0.6",
+    "fs": "0.0.2",
     "postcss-calc": "^5.2.0",
     "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.0",
@@ -48,6 +52,7 @@
     "normalize.css": "^3.0.3",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-remarkable": "^1.1.1",
     "react-router": "^1.0.2"
   }
 }
