Update method of rendering posts

--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
-    "front-matter": "^2.0.6",
-    "fs": "0.0.2",
+    "front-matter-loader": "^0.1.2",
+    "html-loader": "^0.4.3",
+    "json-loader": "^0.5.4",
+    "markdown-loader": "^0.1.7",
     "postcss-calc": "^5.2.0",
     "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.0",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.0",
+    "react-markdown": "^2.1.0",
     "react-transform-hmr": "^1.0.2",
     "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.13.0",
