--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --colors --content-base dist/",
+    "dev": "NODE_ENV=development webpack-dev-server --hot --inline --colors --content-base dist/ --config webpack.dev.config.js",
     "start": "npm run build && npm run dev",
     "build": "NODE_ENV=production webpack --colors"
   },
