--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
+    "build": "NODE_ENV=production webpack --colors",
     "dev": "NODE_ENV=development webpack-dev-server --colors --content-base dist/",
     "hot": "NODE_ENV=hot webpack-dev-server --hot --inline --colors --content-base dist/ --config webpack.dev.config.js",
     "start": "npm run build && npm run dev",
-    "build": "NODE_ENV=production webpack --colors"
+    "startHot": "npm run build && npm run hot"
   },
   "repository": {
     "type": "git",
@@ -49,7 +50,7 @@
   },
   "dependencies": {
     "basscss": "^8.0.1",
-    "basscss-background-colors": "^2.0.0",
+    "basscss-basic": "^1.0.0",
     "basscss-btn": "^1.1.1",
     "history": "^1.13.1",
     "node-libs-browser": "^0.5.3",
