--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-remarkable": "^1.1.1",
-    "react-router": "^1.0.2"
+    "react-router": "^1.0.2",
+    "react-title-component": "^1.0.1"
   }
 }
