--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
+    "clean": "rm -rf dist",
     "build": "webpack --colors",
     "dev": "NODE_ENV=dev webpack-dev-server --hot --inline --colors --content-base dist/ --config webpack.dev.config.js",
-    "start": "npm run build && npm run dev"
+    "start": "npm run clean && npm run build && npm run dev"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "http://davidcalhoun.me",
   "devDependencies": {
     "babel-core": "^6.2.1",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.1.18",
@@ -41,6 +43,7 @@
     "postcss-loader": "^0.8.0",
     "react-markdown": "^2.1.0",
     "react-transform-hmr": "^1.0.2",
+    "standard-loader": "^3.0.0",
     "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
