--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.html",
   "scripts": {
-    "clean": "rm -rf dist",
     "build": "webpack --colors",
-    "dev": "NODE_ENV=dev webpack-dev-server --hot --inline --colors --content-base dist/ --config webpack.dev.config.js",
-    "start": "npm run clean && npm run build && npm run dev"
+    "clean": "rm -rf dist",
+    "serve": "NODE_ENV=dev webpack-dev-server --hot --inline --colors --content-base dist/ --config webpack.dev.config.js",
+    "start": "npm run clean && npm run build && npm run serve"
   },
   "repository": {
     "type": "git",
