--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": ["es2015", "react", "stage-0"],
   "env": {
-    "client": {
+    "development": {
       "plugins": [["react-transform", {
         "transforms": [{
           "transform": "react-transform-hmr",
