Clean up webpack config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "npm run clean && NODE_ENV=static webpack --colors",
     "clean": "rm -rf dist",
     "start": "npm run build:dev && npm run serve",
-    "serve": "webpack-dev-server --hot --inline --content-base dist/ --config webpack.dev.config.js"
+    "serve": "webpack-dev-server --hot --inline"
   },
   "repository": {
     "type": "git",
