--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.6.5",
     "compression": "^1.6.1",
-    "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "front-matter-loader": "^0.1.2",
     "gh-pages": "^0.11.0",
     "html-loader": "^0.4.3",
