--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "npm run build && gh-pages -d dist -b master -t",
     "clean": "rm -rf dist",
     "start": "npm run build:dev && npm run serve",
-    "serve": "webpack-dev-server --hot --inline"
+    "serve": "webpack-dev-server --hot --inline --content-base dist/"
   },
   "repository": {
     "type": "git",
