--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "homepage": "http://davidcalhoun.me",
   "devDependencies": {
     "babel-core": "^6.2.1",
-    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.1.18",
@@ -48,7 +47,8 @@
     "postcss-loader": "^0.8.0",
     "react-markdown": "^2.1.0",
     "react-transform-hmr": "^1.0.2",
-    "standard-loader": "^3.0.0",
+    "standard": "^9.0.2",
+    "standard-loader": "^6.0.1",
     "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
