--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "dcalhoun.github.io",
   "version": "1.0.0",
   "description": "Personal site of David Calhoun.",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "build": "npm run clean && NODE_ENV=prod webpack -p --colors",
-    "build:dev": "npm run clean && NODE_ENV=static webpack --colors",
-    "deploy": "npm run build && gh-pages -d dist -b master -t",
-    "clean": "rm -rf dist",
-    "start": "npm run build:dev && npm run serve",
-    "serve": "webpack-dev-server --hot --inline --content-base dist/"
+    "start": "next"
   },
   "repository": {
     "type": "git",
@@ -22,50 +17,13 @@
     "url": "https://github.com/dcalhoun/dcalhoun.github.io/issues"
   },
   "homepage": "http://davidcalhoun.me",
-  "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.6.5",
-    "compression": "^1.6.1",
-    "css-loader": "^0.23.0",
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "front-matter-loader": "^0.1.2",
-    "gh-pages": "^0.11.0",
-    "html-loader": "^0.4.3",
-    "json-loader": "^0.5.4",
-    "markdown-loader": "^0.1.7",
-    "postcss-calc": "^5.2.0",
-    "postcss-custom-media": "^5.0.1",
-    "postcss-custom-properties": "^5.0.0",
-    "postcss-import": "^8.0.2",
-    "postcss-loader": "^0.8.0",
-    "react-markdown": "^2.1.0",
-    "react-transform-hmr": "^1.0.2",
-    "standard": "^9.0.2",
-    "standard-loader": "^6.0.1",
-    "static-site-generator-webpack-plugin": "^2.0.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.0"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "basscss": "^8.0.1",
-    "basscss-basic": "^1.0.0",
-    "basscss-btn": "^1.1.1",
-    "highlightjs": "^9.10.0",
-    "history": "^1.13.1",
-    "node-libs-browser": "^0.5.3",
-    "normalize.css": "^3.0.3",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-remarkable": "^1.1.1",
-    "react-router": "^1.0.2",
-    "react-title-component": "^1.0.1"
+    "next": "^2.1.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "styletron-client": "^2.5.7",
+    "styletron-react": "^2.5.7",
+    "styletron-server": "^2.5.7"
   }
 }
