--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal site of David Calhoun.",
   "main": "index.js",
   "scripts": {
+    "precommit": "lint-staged",
     "start": "next"
   },
   "repository": {
@@ -18,6 +19,10 @@
   },
   "homepage": "http://davidcalhoun.me",
   "devDependencies": {
+    "husky": "^0.13.3",
+    "lint-staged": "^3.4.1",
+    "prettier": "^1.2.2",
+    "standard": "^10.0.2",
     "styletron-connect": "^0.0.5"
   },
   "dependencies": {
@@ -27,5 +32,12 @@
     "styletron-client": "^2.5.7",
     "styletron-react": "^2.5.7",
     "styletron-server": "^2.5.7"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --no-semi --write",
+      "standard --fix",
+      "git add"
+    ]
   }
 }
