--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "styletron-connect": "^0.0.5"
   },
   "dependencies": {
+    "highlightjs": "^9.10.0",
     "next": "^2.1.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-markdown": "^2.5.0",
     "styletron-client": "^2.5.7",
     "styletron-react": "^2.5.7",
     "styletron-server": "^2.5.7"
