--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styletron-connect": "^0.0.5"
   },
   "dependencies": {
+    "chroma-js": "^1.3.4",
     "highlightjs": "^9.10.0",
     "next": "^2.4.4",
     "react": "^15.6.1",
