--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": "^0.13.3",
     "lint-staged": "^3.4.1",
     "prettier": "^1.2.2",
+    "prop-types": "^15.5.10",
     "standard": "^10.0.2",
     "styletron-connect": "^0.0.5"
   },
