--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "lint-staged": "^3.4.1",
     "prettier": "^1.2.2",
     "prop-types": "^15.5.10",
-    "standard": "^10.0.2",
-    "styletron-connect": "^0.0.5"
+    "standard": "^10.0.2"
   },
   "dependencies": {
     "chroma-js": "^1.3.4",
@@ -33,10 +32,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-markdown": "^2.5.0",
-    "styled-components": "^2.1.0",
-    "styletron-client": "^2.5.7",
-    "styletron-react": "^2.5.7",
-    "styletron-server": "^2.5.7"
+    "styled-components": "^2.1.0"
   },
   "lint-staged": {
     "*.js": [
