--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "http://davidcalhoun.me",
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.1.5",
     "husky": "^0.13.3",
     "lint-staged": "^3.4.1",
     "prettier": "^1.2.2",
@@ -33,7 +32,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-markdown": "^2.5.0",
-    "styled-components": "^2.1.0"
+    "styletron-client": "^2.5.7",
+    "styletron-react": "^2.5.8",
+    "styletron-server": "^2.5.7"
   },
   "lint-staged": {
     "*.js": [
