--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "build:export": "npm run build && npm run export",
-    "build:posts": "processmd posts/**/*.md --outputDir .posts --preview 110 --highlightCode --summaryOutput .posts/summary.json",
+    "build:posts": "processmd posts/**/*.md --preview 110 --highlightCode --summaryOutput .posts/summary.json --outputDir .posts",
     "deploy": "npm run build:posts && npm run build:export && mv out public",
     "export": "next export",
     "precommit": "lint-staged",
@@ -27,15 +27,13 @@
     "husky": "^0.13.3",
     "lint-staged": "^3.4.1",
     "prettier": "^1.2.2",
-    "processmd": "^3.1.3",
+    "processmd": "^3.1.4",
     "prop-types": "^15.5.10",
     "standard": "^10.0.2"
   },
   "dependencies": {
     "chroma-js": "^1.3.4",
-    "front-matter": "^2.1.2",
     "highlightjs": "^9.10.0",
-    "isomorphic-fetch": "^2.2.1",
     "next": "^3.0.1-beta.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
