--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   },
   "homepage": "http://davidcalhoun.me",
   "devDependencies": {
+    "babel-plugin-wrap-in-js": "^1.1.1",
     "husky": "^0.13.3",
     "lint-staged": "^3.4.1",
     "prettier": "^1.2.2",
     "processmd": "^3.1.4",
     "prop-types": "^15.5.10",
+    "raw-loader": "^0.5.1",
     "standard": "^10.0.2"
   },
   "dependencies": {
@@ -37,6 +39,7 @@
     "next": "^3.0.1-beta.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-lowlight": "^1.1.1",
     "react-markdown": "^2.5.0",
     "styletron-client": "^2.5.7",
     "styletron-react": "^2.5.8",
