--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "chroma-js": "^1.3.4",
     "highlightjs": "^9.10.0",
     "next": "^3.0.1-beta.8",
+    "preact": "^8.2.1",
+    "preact-compat": "^3.17.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-lowlight": "^1.1.1",
