--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "plugins": [
+    ["transform-define", "./env-config.js"],
     ["wrap-in-js", { "extensions": ["css$"] }]
   ],
-  "presets": ["next/babel"],
-  "ignore": []
+  "presets": ["next/babel"]
 }
