--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "http://davidcalhoun.me",
   "devDependencies": {
+    "babel-plugin-transform-define": "^1.3.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "husky": "^0.13.3",
     "lint-staged": "^3.4.1",
@@ -39,6 +40,7 @@
     "preact-compat": "^3.17.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-ga": "^2.2.0",
     "react-lowlight": "^1.1.1",
     "react-markdown": "^2.5.0",
     "styletron-client": "^2.5.7",
@@ -50,6 +52,12 @@
       "prettier --single-quote --no-semi --write",
       "standard --fix",
       "git add"
+    ]
+  },
+  "standard": {
+    "globals": [
+      "__DEV__",
+      "__ENV__"
     ]
   }
 }
