--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,7 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "env": {
-    "development": {
-      "plugins": [["react-transform", {
-        "transforms": [{
-          "transform": "react-transform-hmr",
-          "imports": ["react"],
-          "locals": ["module"]
-        }]
-      }]]
-    }
-  }
+  "plugins": [
+    ["transform-define", "./env-config.js"],
+    ["wrap-in-js", { "extensions": ["css$"] }]
+  ],
+  "presets": ["next/babel"]
 }
