--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
     "prettier": "^1.5.3",
-    "processmd": "^3.1.4",
+    "processmd": "^3.1.5",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
     "standard": "^10.0.3"
@@ -37,7 +37,7 @@
   "dependencies": {
     "chroma-js": "^1.3.4",
     "highlightjs": "^9.10.0",
-    "next": "^3.0.1-beta.8",
+    "next": "^3.0.3",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
     "react": "^15.6.1",
