--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
+    "modernizr": "^3.5.0",
+    "modernizr-loader": "^1.0.1",
     "prettier": "^1.5.3",
     "processmd": "^3.1.5",
     "prop-types": "^15.5.10",
