--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "highlightjs": "^9.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-helmet": "^5.2.0",
     "react-lowlight": "^2.0.0",
     "styletron-client": "^3.0.4",
