[change] Setup code highlighting with prismjs

--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.7",
     "gatsby-plugin-sharp": "^2.0.23",
+    "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.0",
     "gatsby-transformer-sharp": "^2.1.15",
-    "highlightjs": "^9.12.0",
+    "prism-theme-night-owl": "^1.0.1",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-helmet": "^5.2.0",
-    "react-lowlight": "^2.0.0",
     "rehype-react": "^3.1.0",
     "styletron-client": "^3.0.4",
     "styletron-react": "^4.4.4",
