--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "format": "prettier --write src/**/*.{css,md,js,json}",
     "lint": "eslint --config .eslintrc.js src",
     "start": "npm run develop",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "theme": "node scripts/theme.js"
   },
   "version": "2.0.0"
 }
