--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.1",
+    "@zeit/next-mdx": "^1.2.0",
     "next": "9.1.5",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "remark-emoji": "^2.0.2",
+    "remark-images": "^1.0.0"
   }
 }
