--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "name": "dcalhoun",
+  "name": "davidcalhoun.me",
   "builds": [{ "src": "package.json", "use": "@now/next" }]
 }
