--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "node": ">=12"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@mdx-js/loader": "^1.5.1",
     "@next/mdx": "^9.1.5",
+    "@zeit/next-css": "^1.0.1",
     "next": "9.1.5",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "remark-emoji": "^2.0.2",
-    "remark-images": "^1.0.0"
+    "remark-images": "^1.0.0",
+    "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
-    "babel-plugin-preval": "^4.0.0"
+    "autoprefixer": "^9.7.3",
+    "babel-plugin-preval": "^4.0.0",
+    "cssnano": "^4.1.10"
   }
 }
