--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/mdx": "^9.1.5",
     "@zeit/next-css": "^1.0.1",
     "next": "9.1.5",
+    "prism-react-renderer": "^1.0.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "remark-emoji": "^2.0.2",
