--- a/now.json
+++ b/now.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
   "name": "davidcalhoun.me",
-  "builds": [{ "src": "package.json", "use": "@now/next" }]
+  "builds": [{ "src": "package.json", "use": "@now/next" }],
+  "env": {
+    "GA_TRACKING_ID": "@davidcalhoun-ga-tracking-id"
+  }
 }
