--- a/now.json
+++ b/now.json
@@ -2,7 +2,9 @@
   "version": 2,
   "name": "davidcalhoun.me",
   "builds": [{ "src": "package.json", "use": "@now/next" }],
-  "env": {
-    "GA_TRACKING_ID": "@davidcalhoun-ga-tracking-id"
+  "build": {
+    "env": {
+      "GA_TRACKING_ID": "@davidcalhoun-ga-tracking-id"
+    }
   }
 }
