--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/loader": "^1.5.3",
     "@next/mdx": "^9.1.6",
     "@zeit/next-css": "^1.0.1",
+    "lazysizes": "^5.2.0",
     "next": "9.1.6",
     "prism-react-renderer": "^1.0.2",
     "react": "16.12.0",
