--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@types/node": "^13.1.1",
+    "@types/node": "^13.1.8",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "autoprefixer": "^9.7.3",
     "babel-plugin-preval": "^4.0.0",
     "chroma-js": "^2.1.0",
     "cssnano": "^4.1.10",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5"
   }
 }
