--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@types/gtag.js": "^0.0.3",
     "@types/mdx-js__react": "^1.5.0",
     "@types/node": "^13.1.8",
     "@types/react": "^16.9.17",
