--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["preval", "macros"]
+  "plugins": ["preval", "macros", "babel-plugin-bucklescript"]
 }
