--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "predev": "node ./scripts/theme.js",
-    "dev": "next dev",
+    "dev:reason": "bsb -clean-world -make-world -w",
+    "dev:next": "next dev",
     "prebuild": "node ./scripts/theme.js",
-    "build": "next build",
+    "build": "bsb -clean-world -make-world && next build",
     "start": "next start",
     "typecheck": "tsc"
   },
@@ -22,6 +23,7 @@
     "prism-react-renderer": "^1.0.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "reason-react": "^0.7.0",
     "remark-emoji": "^2.0.2",
     "remark-images": "^1.0.0",
     "tailwindcss": "^1.1.4"
@@ -34,9 +36,12 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "autoprefixer": "^9.7.3",
+    "babel-plugin-bucklescript": "^0.5.3",
     "babel-plugin-preval": "^4.0.0",
+    "bs-platform": "^7.1.0",
     "chroma-js": "^2.1.0",
     "cssnano": "^4.1.10",
+    "next-transpile-modules": "^3.0.2",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5"
   }
