Add index page rendering TextButton
Styles are broken due to CSS custom properties.

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,5 +18,8 @@
   },
   "suffix": ".bs.js",
   "bsc-flags": ["-bs-super-errors"],
-  "refmt": 3
+  "refmt": 3,
+  "gentypeconfig": {
+    "language": "typescript"
+  }
 }
