--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bs-platform": "^7.1.0",
     "chroma-js": "^2.1.0",
     "cssnano": "^4.1.10",
+    "gentype": "^3.12.0",
     "next-transpile-modules": "^3.0.2",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5"
