--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,10 @@
 {
   "name": "davidcalhoun",
-  "sources": ["components", "pages", "utils"],
+  "sources": [
+    { "dir": "components", "subdirs": true },
+    { "dir": "pages", "subdirs": true },
+    { "dir": "utils", "subdirs": true }
+  ],
   "bs-dependencies": ["reason-react"],
   "reason": { "react-jsx": 3 },
   "package-specs": {
