--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predev": "node ./scripts/theme.js",
+    "predev:next": "node ./scripts/theme.js",
     "dev:reason": "bsb -clean-world -make-world -w",
     "dev:next": "next dev",
     "prebuild": "node ./scripts/theme.js",
