--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev:next": "next dev",
     "prebuild": "node ./scripts/theme.js",
     "build": "bsb -clean-world -make-world && next build",
-    "start": "next start",
-    "typecheck": "tsc"
+    "start": "next start"
   },
   "engines": {
     "node": ">=12"
@@ -31,11 +30,6 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@types/gtag.js": "^0.0.3",
-    "@types/mdx-js__react": "^1.5.0",
-    "@types/node": "^13.1.8",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
     "autoprefixer": "^9.7.3",
     "babel-plugin-preval": "^4.0.0",
     "bs-platform": "^7.1.0",
@@ -43,7 +37,6 @@
     "cssnano": "^4.1.10",
     "gentype": "^3.12.0",
     "next-transpile-modules": "^3.0.2",
-    "typescript": "^3.7.5",
     "webpack": "^4.41.5"
   }
 }
