--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predev": "node ./scripts/theme.js",
-    "dev": "next dev",
+    "predev:next": "node ./scripts/theme.js",
+    "dev:reason": "bsb -clean-world -make-world -w",
+    "dev:next": "next dev",
     "prebuild": "node ./scripts/theme.js",
-    "build": "next build",
-    "start": "next start",
-    "typecheck": "tsc"
+    "build": "bsb -clean-world -make-world && next build",
+    "start": "next start"
   },
   "engines": {
     "node": ">=12"
@@ -17,27 +17,26 @@
     "@mdx-js/loader": "^1.5.3",
     "@next/mdx": "^9.1.6",
     "@zeit/next-css": "^1.0.1",
+    "bs-webapi": "^0.15.9",
     "lazysizes": "^5.2.0",
     "next": "9.3.2",
     "prism-react-renderer": "^1.0.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "reason-react": "^0.7.0",
     "remark-emoji": "^2.0.2",
     "remark-images": "^1.0.0",
     "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@types/gtag.js": "^0.0.3",
-    "@types/mdx-js__react": "^1.5.0",
-    "@types/node": "^13.1.8",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
     "autoprefixer": "^9.7.3",
     "babel-plugin-preval": "^4.0.0",
+    "bs-platform": "^7.1.0",
     "chroma-js": "^2.1.0",
     "cssnano": "^4.1.10",
-    "typescript": "^3.7.5",
+    "gentype": "^3.12.0",
+    "next-transpile-modules": "^3.0.2",
     "webpack": "^4.41.5"
   }
 }
