Fix Next page build error
Next disallows files in the `pages` directory that do provide a default
export that is a React component.

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -3,6 +3,7 @@
   "sources": [
     { "dir": "components", "subdirs": true },
     { "dir": "pages", "subdirs": true },
+    { "dir": "re_pages", "subdirs": true },
     { "dir": "utils", "subdirs": true }
   ],
   "bs-dependencies": ["reason-react", "bs-webapi"],
